Minor fix for menu alignment

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -1044,6 +1044,7 @@ dl.article-info {
 #nav-menu {
 
 	.nav {
+		float: right;
 
 		> li {
 
